# fibonachy_nim

./: CMakeLists.txt  Source.cpp  arrayint.c  exact_cover_main.c  exact_cover_to_square.c  fib lvl 2.c  fib lvl 2.cpp  fib lvl1.c  fib lvl1.cpp  generator.c  greeklatinsq.c  greeklatinsq_by_exc.c  greeksq_to_exc.c  readme  sudoku.c
exact_cover/: Array2dInt.c  Array2dInt.h  CMakeLists.txt  algorithms.c  algorithms.h  arrayint.c  arrayint.h  exactcover.c  exactcover.h  greeklatinsquare.c  greeklatinsquare.h  listlikematrix.c  listlikematrix.h  main.c  permutations.c  test.txt  user_interactions.c  user_interactions.h  vector.c  vector.h  vectordef.c  vectordef.h  vectorfuncs.c  vectorfuncs.h
gen_lib/types_and_functions_declarations/: type_declaration.h
gen_lib/user_interacts/: user_interactions.h
gen_lib/vector/: algorithms.h  vectordef.h  vectorfuncs.h
greeklatinsquare/: Array2dInt.c  Array2dInt.h  CMakeLists.txt  arrayint.c  arrayint.h  generator.c  greeklatinsquare.c  greeklatinsquare.h  main.c  permutations.c  permutations.h  test.txt  user_interactions.c  user_interactions.h
vector/: CMakeLists.txt  algorithms.c  vector.c  vector.h  vectordef.c  vectordef.h  vectorfuncs.c
